Fix more info table alignment.

--- a/MyAnimeList/MyAnimeList/css/style.css
+++ b/MyAnimeList/MyAnimeList/css/style.css
@@ -21,3 +21,8 @@
 	padding-left: 5px;
 	padding-bottom: 5px;
 }
+
+[id^=more] table {
+	margin-left: 20px;
+	width: calc(100% - 20px);
+}
